Set header z-index to 1 to prevent .post-date from overlapping #nav-bar

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 html, body {
     background-color: #222;
-    
+
     width: 100%;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -12,6 +12,7 @@ html, body {
 header {
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 #nav-bar {
